# gpuplayground

./: CMakeLists.txt  LICENSE  README.md
assets/: drawrect.nvp  gpuplay.ini
src/: gpuplay.h  main.c  main_help.c  nvplay.h
src/architecture/generic/: nv_generic.h  nv_generic_tests.c
src/architecture/r128/: r128.h  r128_core.c  r128_ref.h
src/architecture/voodoo3/: voodoo3.h  voodoo3_core.c  voodoo3_ref.h
src/config/: config.c  config.h
src/core/: gpu_detect.c  gpu_io.c  gpu_list.c  gpu_repl.c
src/core/formats/: format_gpus.c  format_gpus_device_ids.h
src/core/pci/: pci.c
src/core/script/: gpu_script_commands.c  gpu_script_parser.c
src/core/tests/: tests.c  tests.h
src/util/: ini.c  ini.h  util.h  util_cmdline.c  util_logging.c  util_string.c
